@@ -16,56 +16,38 @@
  */
 package org.exoplatform.task.service.impl;
 
+import static org.exoplatform.task.util.TaskUtil.TASK_COMMENT_CREATED;
+import static org.exoplatform.task.util.TaskUtil.TASK_COMMENT_DELETED;
+import static org.exoplatform.task.util.TaskUtil.broadcastEvent;
+
+import java.util.List;
+
 import org.exoplatform.commons.api.persistence.ExoTransactional;
 import org.exoplatform.services.listener.ListenerService;
 import org.exoplatform.services.log.ExoLogger;
 import org.exoplatform.services.log.Log;
-import org.exoplatform.social.core.identity.model.Identity;
-import org.exoplatform.social.core.identity.provider.OrganizationIdentityProvider;
-import org.exoplatform.social.core.service.LinkProvider;
-import org.exoplatform.task.dao.DAOHandler;
+import org.exoplatform.social.core.utils.MentionUtils;
 import org.exoplatform.task.dto.CommentDto;
 import org.exoplatform.task.dto.TaskDto;
 import org.exoplatform.task.exception.EntityNotFoundException;
 import org.exoplatform.task.service.CommentService;
 import org.exoplatform.task.storage.CommentStorage;
-import org.exoplatform.task.storage.TaskStorage;
-
-import javax.inject.Inject;
-import java.util.List;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
-import java.util.stream.Collectors;
-
-import static org.exoplatform.task.util.TaskUtil.*;
 
 public class CommentServiceImpl implements CommentService {
     private static final Log LOG = ExoLogger.getExoLogger(CommentServiceImpl.class);
-    private static final Pattern pattern = Pattern.compile("@([^\\s]+)|@([^\\s]+)$");
 
-    @Inject
-    private TaskStorage taskStorage;
-
-    @Inject
     private CommentStorage commentStorage;
-
-    @Inject
-    private DAOHandler daoHandler;
 
     private ListenerService listenerService;
 
-    public CommentServiceImpl(TaskStorage taskStorage, CommentStorage commentStorage, DAOHandler daoHandler, ListenerService listenerService) {
-        this.taskStorage = taskStorage;
-        this.commentStorage = commentStorage;
-        this.daoHandler = daoHandler;
-        this.listenerService = listenerService;
+    public CommentServiceImpl(CommentStorage commentStorage, ListenerService listenerService) {
+      this.commentStorage = commentStorage;
+      this.listenerService = listenerService;
     }
 
     @Override
     public CommentDto getComment(long commentId) {
-        CommentDto comment = commentStorage.getComment(commentId);
-        comment.setComment(substituteUsernames(comment.getComment()));
-        return comment;
+        return commentStorage.getComment(commentId);
     }
 
     @Override
@@ -88,13 +70,13 @@ public class CommentServiceImpl implements CommentService {
         if (listComments == null || listComments.isEmpty()) {
             return null;
         }
-        listComments.forEach(comment -> comment.setComment(substituteUsernames(comment.getComment())));
+        listComments.forEach(comment -> comment.setComment(MentionUtils.substituteUsernames(comment.getComment())));
         List<CommentDto> subComments = commentStorage.loadSubComments(listComments);
         for (CommentDto comment : listComments) {
-            subComments.forEach(subComment -> subComment.setComment(substituteUsernames(subComment.getComment())));
+            subComments.forEach(subComment -> subComment.setComment(MentionUtils.substituteUsernames(subComment.getComment())));
             comment.setSubComments(subComments.stream()
                     .filter(subComment -> subComment.getParentComment().getId() == comment.getId())
-                    .collect(Collectors.toList()));
+                    .toList());
         }
         return listComments;
     }
@@ -135,39 +117,4 @@ public class CommentServiceImpl implements CommentService {
       broadcastEvent(listenerService, TASK_COMMENT_DELETED, comment.getTask(), comment);
     }
 
-    private String substituteUsernames(String message) {
-        if (message == null || message.trim().isEmpty()) {
-            return message;
-        }
-        //
-        Matcher matcher = pattern.matcher(message);
-
-        // Replace all occurrences of pattern in input
-        StringBuffer buf = new StringBuffer();
-        while (matcher.find()) {
-            // Get the match result
-            String username = matcher.group().substring(1);
-            if (username == null || username.isEmpty()) {
-                continue;
-            }
-            Identity identity = LinkProvider.getIdentityManager().getOrCreateIdentity(OrganizationIdentityProvider.NAME, username, false);
-            if (identity == null || identity.isDeleted() || !identity.isEnable()) {
-                continue;
-            }
-            try {
-                username = LinkProvider.getProfileLink(username, "dw");
-            } catch (Exception e) {
-                continue;
-            }
-            // Insert replacement
-            if (username != null) {
-                matcher.appendReplacement(buf, username);
-            }
-        }
-        if (buf.length() > 0) {
-            matcher.appendTail(buf);
-            return buf.toString();
-        }
-        return message;
-    }
 }
